[package]
name = "letter-freq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
rustc-hash = "1.1.0"
rayon = "1.5.2"

[[bench]]
name = "letter_freq_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1